--- a/web_dev/creatify/creatify_app/templates/creatify_app/main.html
+++ b/web_dev/creatify/creatify_app/templates/creatify_app/main.html
@@ -1,103 +1,24 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-    <link rel="stylesheet" href="style.css">
-    <title>Creatify</title>
+  {% load static %}
+  <link rel="stylesheet" type="text/css" href="{% static 'creatify_app/style.css' %}">
+  <title>Creatify</title>
 </head>
 <body>
   <h2>Genere Selector</h2>
   <div id="genre-list"></div>
-
-
-  <div class="search-container">
-    <input type="text" placeholder="Search genres..." id="search-bar">
-    <div id="genre-box"></div>
-  </div>
-  <script>
-// Get the search bar element
-var searchbar = document.getElementById("search-bar");
-
-// Get the genre box element
-var genreBox = document.getElementById("genre-box");
-
-// Get the genre list element
-var genreList = document.getElementById("genre-list");
-
-// Define an array to hold the selected genres
-var selectedGenres = [];
-
-// Load the genres from a file
-var genres = [];
-fetch("genres.txt")
-  .then(response => response.text())
-  .then(data => {
-    genres = data.split("\n");
-    // Print the list of all genres in the genreList element
-    for (var i = 0; i < genres.length; i++) {
-      var genre = genres[i];
-      var genreElement = document.createElement("div");
-      genreElement.textContent = genre;
-      genreList.appendChild(genreElement);
-    }
-  });
-
-// Function to add a genre to the box
-function addGenre(genre) {
-  // Add the genre to the selectedGenres array
-  selectedGenres.push(genre);
-
-  // Create a new genre element
-  var genreElement = document.createElement("div");
-  genreElement.classList.add("genre");
-  genreElement.textContent = genre;
-
-  // Add the genre element to the genre box
-  genreBox.appendChild(genreElement);
-
-  // Add an event listener to the genre element to remove it when clicked
-  genreElement.addEventListener("click", function() {
-    // Remove the genre from the selectedGenres array
-    selectedGenres.splice(selectedGenres.indexOf(genre), 1);
-
-    // Remove the genre element from the genre box
-    genreBox.removeChild(genreElement);
-  });
-}
-
-// Add an event listener to the search bar to filter the genres
-searchbar.addEventListener("input", function() {
-  // Get the search query from the search bar
-  var query = searchbar.value.trim().toLowerCase();
-
-  // Clear the genre box
-  genreBox.innerHTML = "";
-
-  // Add any genres that match the search query
-  for (var i = 0; i < genres.length; i++) {
-    var genre = genres[i];
-    if (genre.toLowerCase().includes(query)) {
-      var alreadySelected = selectedGenres.includes(genre);
-      var genreElement = document.createElement("div");
-      genreElement.classList.add("genre");
-      genreElement.textContent = genre;
-      if (alreadySelected) {
-        genreElement.classList.add("selected");
-      }
-      genreElement.addEventListener("click", function() {
-        if (!alreadySelected) {
-          addGenre(genre);
-        }
-      });
-      genreBox.appendChild(genreElement);
-    }
-  }
-});
-
-
-  </script>
-
-
-
+  <table>
+    <tr>
+      {% for genre in genres %}
+        <td><button class="unclicked" onclick='toggleButtonClass(this)'>{{ genre }}</button></td>
+        {% if forloop.counter|divisibleby:13 %}
+          </tr><tr>
+        {% endif %}
+      {% endfor %}
+    </tr>
+  </table>
+  
 	<h2>Danceability Rating Slider</h2>
     <br>
     <br>
@@ -124,39 +45,8 @@ searchbar.addEventListener("input", function() {
 
 
 	<button onclick="saveSliderValue()">Submit</button>
+  <script src="{% static 'creatify_app/main.js' %}"></script>
 
-	<script>
-        const toggleButton = document.getElementById("toggleButton");
-        const sliderWrapper = document.querySelector(".slider-wrapper");
-		const slider = document.getElementById("ratingSlider");
-		const submitButton = document.getElementById("submitButton");
-
-        toggleButton.addEventListener("change", function() {
-			if (this.checked) {
-				sliderWrapper.classList.remove("disabled");
-			} else {
-				sliderWrapper.classList.add("disabled");
-			}
-		});
-
-        slider.addEventListener("input", function() {
-            if (this.value === "1") {
-            undertext.innerHTML = "These songs will have below the average danceability rating in this genre.";
-            } else if (this.value === "2") {
-            undertext.innerHTML = "These songs will have the average danceability rating in this genre. Removes all outliers";
-            } else if (this.value === "3") {
-            undertext.innerHTML = "These songs will have the above the average danceability rating in this genre.";
-            }
-        });
-
-        submitButton.addEventListener("click", function() {
-			const ratingValue = slider.value;
-			const toggleValue = toggleButton.checked;
-			// send ratingValue and toggleValue to Python script using AJAX
-		});
-	</script>
-
-
-
+</body>
 
 </html>
