--- a/web_dev/creatify/creatify_app/static/creatify_app/style.css
+++ b/web_dev/creatify/creatify_app/static/creatify_app/style.css
@@ -33,3 +33,38 @@ body{
  background-color: #000;
  color: white;
 }
+.collapsible {
+    background-color: #000;
+    color: #fff;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+  }
+  
+  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+  .active, .collapsible:hover {
+    background-color: #000;
+  }
+  
+  /* Style the collapsible content. Note: hidden by default */
+  .content {
+    padding: 0 18px;
+    background-color: black;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.25s ease-out;
+  }
+h3 {
+    font-size: xx-large;
+    text-shadow: 2px 2px 4px lime;
+}
+.slider-wrapper > * {
+    width: 75%;
+}
+span {
+    width: 100%;
+}
