--- a/web_dev/creatify/creatify_app/static/creatify_app/style.css
+++ b/web_dev/creatify/creatify_app/static/creatify_app/style.css
@@ -60,11 +60,95 @@ body{
   }
 h3 {
     font-size: xx-large;
-    color: lime;
+    color: #5ecf62;
+    display: inline-block;
   }
-.slider-wrapper > * {
-    width: 75%;
+  .slider-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-span {
+
+.slider-wrapper > * {
+    width: 80%;
+    margin-bottom: 10px;
+}
+
+.slider-wrapper > .slider {
     width: 100%;
+    height: 20px;
+    border-radius: 10px;
+    background-color: #ddd;
+    appearance: none;
+    outline: none;
+}
+
+.slider-wrapper > .slider::-webkit-slider-thumb {
+    appearance: none;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    background-color: #4CAF50;
+    cursor: pointer;
+    position: relative;
+    z-index: 1;
+}
+
+.slider-wrapper > .slider::-moz-range-thumb {
+    appearance: none;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    background-color: #4CAF50;
+    cursor: pointer;
+    position: relative;
+    z-index: 1;
+}
+
+.slider-wrapper > .labels {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.slider-wrapper > .low {
+    text-align: left;
+}
+
+.slider-wrapper > .high {
+    text-align: right;
+}
+.slider-dots {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 20px;
+  margin-top: -30px;
+  pointer-events: none;
+}
+
+.slider-dots .dot {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #999;
+  pointer-events: none;
+}
+.custom-checkbox {
+  appearance: none;
+  background-color: #aaa; /* set initial background color to gray */
+  border-radius: 4px;
+  width: 20px;
+  height: 20px;
+  margin-right: 8px;
+  margin-top: 10px;
+}
+
+.custom-checkbox:checked {
+  background-color: lime; /* change background color of adjacent span element when checkbox is checked */
+}
+
+.custom-checkbox {
+  color: #000; /* set color of adjacent span element */
+  font-size: 16px;
 }
