some important convention changes and added better background color

--- a/web_dev/creatify/creatify_app/templates/creatify_app/main.html
+++ b/web_dev/creatify/creatify_app/templates/creatify_app/main.html
@@ -3,7 +3,7 @@
 
 {% block styles %}
   {% load static %}
-  <link rel="stylesheet" type="text/css" href="{% static 'creatify_app/style.css' %}">
+  <link rel="stylesheet" type="text/css" href="{% static 'creatify_app/main_page.css' %}">
   {% endblock %}
 {% block content %}
 <button type="button" class="collapsible"><h2>Genere Selector</h2></button>
@@ -40,7 +40,7 @@
 
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="{% static 'creatify_app/main.js' %}"></script>
+  <script src="{% static 'creatify_app/main_page.js' %}"></script>
 
   {% endblock %}
 
