--- a/web_dev/creatify/creatify_app/templates/creatify_app/base.html
+++ b/web_dev/creatify/creatify_app/templates/creatify_app/base.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>{% block title %}Default Title{% endblock %}</title>
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'creatify_app/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'creatify_app/default.css' %}">
     <script src="https://kit.fontawesome.com/06d2dc652b.js" crossorigin="anonymous"></script>
     {% block styles %}{% endblock %}
   </head>
