--- a/web_dev/creatify/creatify_app/static/creatify_app/main_page.css
+++ b/web_dev/creatify/creatify_app/static/creatify_app/main_page.css
@@ -135,3 +135,16 @@ h3 {
  color: #000; /* set color of adjacent span element */
  font-size: 16px;
 }
+#center-container {
+ display: flex;
+ justify-content: center;
+ align-items: center;
+}
+#generate_bt{
+ border: #000;
+ background-color: #5ecf62;
+ opacity: .7;
+ color:white;
+ padding: 20px;
+ margin-top: 30px;
+}
