web to ajax to view is functional, also cleaned templates folder

--- a/web_dev/creatify/creatify_app/templates/creatify_app/main.html
+++ b/web_dev/creatify/creatify_app/templates/creatify_app/main.html
@@ -2,6 +2,7 @@
 {% block title %}Creatify{% endblock %}
 
 {% block styles %}
+  {% csrf_token %}
   {% load static %}
   <link rel="stylesheet" type="text/css" href="{% static 'creatify_app/main_page.css' %}">
   {% endblock %}
