--- a/web_dev/creatify/creatify_app/templates/creatify_app/base.html
+++ b/web_dev/creatify/creatify_app/templates/creatify_app/base.html
@@ -25,5 +25,13 @@
       {% block content %}
       {% endblock %}
     </main>
+    <div class='bottom'>
+      <a href="mailto:o.a.reinhart@wustl.edu"> 
+        <img src="{% static 'creatify_app/mail_icon.png'%}" alt = "mail icon" class="icon">
+      </a> 
+      <a href="https://github.com/victoriab027/Creatify"> 
+        <img src="{%static 'creatify_app/github-mark-white.png' %}" alt="linkedin logo" class="icon2">
+      </a> 
+    </div>
   </body>
 </html>
