--- a/web_dev/creatify/creatify_app/static/creatify_app/default.css
+++ b/web_dev/creatify/creatify_app/static/creatify_app/default.css
@@ -1,4 +1,22 @@
 body{
  background: #222;
- color: white;
 }
+.bottom{
+    margin-top: 20px;
+    width: 100%;
+    height: 50px;
+    background: #333;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .icon{
+      height: 26px;
+      width: 26px;
+  }
+  .icon2{
+      height: 24px;
+      width: 24px;
+    margin-left: 10px;
+  }
+  
