--- a/web_dev/creatify/creatify_app/templates/creatify_app/main.html
+++ b/web_dev/creatify/creatify_app/templates/creatify_app/main.html
@@ -27,11 +27,11 @@
         <input type="checkbox" class="custom-checkbox" id="{{slider}}" checked> <br>
         <div class="slider-wrapper" id="slider-{{slider}}" >
             <div class="labels">
-                <span class="low">Low</span>
-                <span class="medium">Medium</span>
-                <span class="high">High</span>
+              <span class="low" id="low-{{slider}}">Low</span>
+              <span class="medium" id="medium-{{slider}}">Medium</span>
+              <span class="high" id="high-{{slider}}">High</span>
             </div>
-            <input type="range" min="1" max="3" value="2" class="slider">
+            <input type="range" min="1" max="3" value="2" class="slider" id="slider-input-{{slider}}">
             <div class="slider-dots">
                 <span id="1 {{slider}}" class="dot"></span>
                 <span id="2 {{slider}}" class="dot"></span>
@@ -40,6 +40,7 @@
         </div>
 {% endfor %}
 <div id="center-container"><button id="generate_bt">Generate Playlist</button></div>
+
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="{% static 'creatify_app/main_page.js' %}"></script>
 {% endblock %}
