minor ui improvements to sliders

--- a/web_dev/creatify/creatify_app/templates/creatify_app/main.html
+++ b/web_dev/creatify/creatify_app/templates/creatify_app/main.html
@@ -23,7 +23,7 @@
   </table>
 </div>
 {% for slider in sliders %}
-    <h3>{{slider}} Rating Slider</h3>
+    <h3>{{slider}}</h3>
         <input type="checkbox" class="custom-checkbox" id="{{slider}}" checked> <br>
         <div class="slider-wrapper" id="slider-{{slider}}" >
             <div class="labels">
