--- a/web_dev/creatify/creatify_app/static/creatify_app/main_page.css
+++ b/web_dev/creatify/creatify_app/static/creatify_app/main_page.css
@@ -46,7 +46,6 @@ button:hover{
  outline: none;
  font-size: 15px;
 } 
-  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 .collapsible:hover {
     background-color: #111;
 } 
@@ -63,6 +62,12 @@ h3 {
  display: inline-block;
  cursor:default;
  margin-left: 20px;
+}
+.subtext{
+  font-size: large;
+  color: #5ecf62;
+  display: inline-block;
+  cursor:default;
 }
 .slider-wrapper {
  display: flex;
@@ -120,6 +125,7 @@ h3 {
  color: #6ADE70;
  opacity: .8;
  cursor:default;
+ font-weight: 700;
 }
 .high {
  color: #63DB67;
@@ -144,11 +150,33 @@ h3 {
 .custom-checkbox {
  appearance: none;
  background-color: #aaa; /* set initial background color to gray */
- border-radius: 4px;
- width: 20px;
- height: 20px;
+ border-radius: 15px;
+ width: 15px;
+ height: 15px;
+ margin-left: 1px;
  margin-right: 8px;
- margin-top: 10px;
+ margin-bottom: -1px;
+}
+.tooltip {
+ position: relative;
+ display: inline-block;
+}
+.tooltip .tooltiptext {
+ font-size: small;
+ visibility: hidden;
+ background-color: black;
+ color: #fff;
+ text-align: center;
+ border-radius: 6px;
+ padding: 5px 9px;
+ position: absolute;
+ z-index: 1;
+ bottom: 100%;
+ left: 50%;
+ margin-left: -60px;
+}
+.tooltip:hover .tooltiptext {
+  visibility: visible;
 }
 .custom-checkbox:checked {
  background-color: lime; /* change background color of adjacent span element when checkbox is checked */
