--- a/web_dev/creatify/creatify_app/templates/creatify_app/main.html
+++ b/web_dev/creatify/creatify_app/templates/creatify_app/main.html
@@ -27,7 +27,7 @@
         <div class="tooltip"><input type="checkbox" class="custom-checkbox" id="{{slider}}" checked> 
           <span class="tooltiptext">Enable/Disable {{slider}}</span>
         </div>
-        <div class='subtext'>Learn More</div><br>
+        {% comment %} <div class='subtext'>Learn More</div>{% endcomment %}<br>
         <div class="slider-wrapper" id="slider-{{slider}}" >
             <div class="labels">
               <span class="low" id="low-{{slider}}">Low</span>
