added description hidden when checkbox selected

--- a/web_dev/creatify/creatify_app/static/creatify_app/default.css
+++ b/web_dev/creatify/creatify_app/static/creatify_app/default.css
@@ -1,6 +1,7 @@
 body{
  background: #222;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+ margin: 25px;
 }
 .bottom{
     margin-top: 20px;
