--- a/web_dev/creatify/creatify_app/templates/creatify_app/main.html
+++ b/web_dev/creatify/creatify_app/templates/creatify_app/main.html
@@ -23,10 +23,11 @@
   </table>
 </div>
 {% for slider in sliders %}
-    <h3>{{slider}}</h3>
+    <h3 class="slider-name">{{slider}}</h3>
         <div class="tooltip"><input type="checkbox" class="custom-checkbox" id="{{slider}}" checked> 
           <span class="tooltiptext">Enable/Disable {{slider}}</span>
         </div>
+    <div class="slider-description" id="desc-{{slider}}" style="display:none;">Description of the {{slider}} slider</div>
         {% comment %} <div class='subtext'>Learn More</div>{% endcomment %}<br>
         <div class="slider-wrapper" id="slider-{{slider}}" >
             <div class="labels">
