--- a/web_dev/creatify/creatify_app/templates/creatify_app/main.html
+++ b/web_dev/creatify/creatify_app/templates/creatify_app/main.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <button type="button" class="collapsible"><h2>Genere Selector</h2></button>
-<div class="content">
+<div class="content" style="max-height: 889px;">
   <input type="text" id="genre-filter" placeholder="Enter a genre">
   <table id ="genre-table">
     <tr>
