--- a/web_dev/creatify/creatify_app/templates/creatify_app/main.html
+++ b/web_dev/creatify/creatify_app/templates/creatify_app/main.html
@@ -23,19 +23,19 @@
   </table>
 </div>
 {% for slider in sliders %}
-    <h3 class="slider-name">{{slider.name}}</h3>
+    <h3 class="slider">{{slider.name}}</h3>
         <div class="tooltip"><input type="checkbox" class="custom-checkbox" id="{{slider.name}}" checked> 
           <span class="tooltiptext">Enable/Disable {{slider.name}}</span>
         </div>
     <div class="slider-description" id="desc-{{slider.name}}" style="display:none;">{{slider.desc}}</div>
         {% comment %} <div class='subtext'>Learn More</div>{% endcomment %}<br>
         <div class="slider-wrapper" id="slider-{{slider.name}}" >
+            <span class="medium" id="medium-{{slider.name}}">{{slider.medium}}</span>
             <div class="labels">
-              <span class="low" id="low-{{slider.name}}">Low</span>
-              <span class="medium" id="medium-{{slider.name}}">Medium</span>
-              <span class="high" id="high-{{slider.name}}">High</span>
+              <span class="low" id="low-{{slider.name}}">{{slider.low}}</span>
+              <span class="high" id="high-{{slider.name}}">{{slider.high}}</span>
             </div>
-            <input type="range" min="1" max="3" value="2" class="slider" id="slider-input-{{slider}}">
+            <input type="range" min="1" max="3" value="2" class="slider" id="slider-input-{{slider.name}}">
             <div class="slider-dots">
                 <span id="1 {{slider.name}}" class="dot"></span>
                 <span id="2 {{slider.name}}" class="dot"></span>
