--- a/web_dev/creatify/creatify_app/static/creatify_app/main_page.css
+++ b/web_dev/creatify/creatify_app/static/creatify_app/main_page.css
@@ -51,7 +51,7 @@ button:hover{
   color: #ddd;
 }
 .content {
-  padding: 0 18px;
+  padding: 0px 10px 10px 15px;
   background-color: #111;
   overflow: hidden;
   transition: max-height 0.25s ease-out;
