--- a/web_dev/creatify/creatify_app/templates/creatify_app/results.html
+++ b/web_dev/creatify/creatify_app/templates/creatify_app/results.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-<h3>Your Playlist</h3>
+<h3>Your Playlist</h3> <h4>Your Genres: {% for genre in selected_genres%} {{genre}} {%endfor%} </h4>
 <div id="grid">
     <div class="left"> 
         <h2>Suggested Names</h2>
