--- a/web_dev/creatify/creatify_app/templates/creatify_app/base.html
+++ b/web_dev/creatify/creatify_app/templates/creatify_app/base.html
@@ -6,6 +6,7 @@
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'creatify_app/default.css' %}">
     <script src="https://kit.fontawesome.com/06d2dc652b.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'creatify_app/favicon.ico' %}">
     {% block styles %}{% endblock %}
   </head>
   <body> 
