--- a/web_dev/creatify/creatify_app/templates/creatify_app/main.html
+++ b/web_dev/creatify/creatify_app/templates/creatify_app/main.html
@@ -44,6 +44,14 @@
             </div>
         </div>
 {% endfor %}
+
+<div class = "center">
+  <button data-text="Awesome" class="gen_button">
+    <span class="actual-text">&nbsp;GENREATE PLAYLIST&nbsp;</span>
+    <span class="gen_hover-text" aria-hidden="true">&nbsp;GENREATE PLAYLIST&nbsp;</span>
+</button>
+</div>
+
 <div id="center-container"><button id="generate_bt">Generate Playlist</button></div>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
